--- a/untitled.vcxproj
+++ b/untitled.vcxproj
@@ -187,6 +187,7 @@
     </QtUic>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Filter.cpp" />
     <ClCompile Include="ImageConverter.cpp" />
     <ClCompile Include="ImageProcess.cpp" />
     <ClCompile Include="main.cpp" />
@@ -213,6 +214,7 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">release\moc_predefs.h;%(Outputs)</Outputs>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </CustomBuild>
+    <ClInclude Include="Filter.h" />
     <ClInclude Include="ImageConverter.h" />
     <ClInclude Include="ImageProcess.h" />
     <ClInclude Include="ui_mainwindow.h" />
