--- a/untitled.vcxproj.filters
+++ b/untitled.vcxproj.filters
@@ -84,5 +84,8 @@
     <ClInclude Include="Filter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MAT.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
