添加图层混合功能

--- a/untitled.vcxproj
+++ b/untitled.vcxproj
@@ -192,6 +192,7 @@
     <ClCompile Include="ImageProcess.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
+    <ClCompile Include="MAT.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="mainwindow.h">
